# cindernet

./: CMakeLists.txt
header/: activationfunc.h  backpropagation.h  feedforward.h  neuralnet.h
slib/xentorch/: .clangd.save  CMakeLists.txt
slib/xentorch/examples/: cudamatmul.cpp
slib/xentorch/header/: declaration.h
slib/xentorch/src/: cuda.cu  source.cpp
src/: neuralnet.cpp  test.cpp
